# Vendor-Routing

./: .gitignore  README.md  docker-compose.yml
configs/: .gitkeep  pan_verification.json
docs/: architecture.md  routing-decisions.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AttemptsTimeline.tsx  StatusDot.tsx
frontend/src/pages/: Agent.tsx  Logs.tsx  Metrics.tsx  Playground.tsx  Vendors.tsx
frontend/src/theme/: tokens.ts
mock-vendors/: Dockerfile  app.py  vendor_profiles.json
router/: Dockerfile  pyproject.toml
router/app/: __init__.py  config.py  exceptions.py  main.py
router/app/agent/: service.py
router/app/api/: agent.py  health.py  logs.py  metrics.py  route.py  vendors.py
router/app/db/: database.py  tables.py
router/app/models/: logs.py  responses.py  routing.py  vendor.py
router/app/registry/: registry.py
router/app/reliability/: __init__.py  circuit_breaker.py  metrics.py  rate_limiter.py
router/app/routing/: engine.py  pipeline.py
router/app/routing/strategies/: base.py  failover.py  feature_based.py  health_based.py  lowest_cost.py  lowest_latency.py  priority.py  round_robin.py  weighted.py
router/app/vendors/: adapter.py  normalizer.py
router/tests/: test_route_e2e.py  test_routing.py
samples/requests/: .gitkeep  pan_verify.json
samples/responses/: .gitkeep  pan_verify.json
